--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -60,6 +60,9 @@ http {
 
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
+	proxy_read_timeout 1500;
+	proxy_connect_timeout 1500;
+	proxy_send_timeout 1500;
 }
 
 
